# android-doctor

./: .gitignore  LICENSE  README.md  android-doctor  doctor.py  pyproject.toml
adb/: commands.py  connection.py  parsers.py
data/: bloatware_db.json  custom_bloatware.example.yaml
diagnosis/: battery.py  benchmark.py  bloatware.py  cpu.py  history.py  memory.py  storage.py  verdict.py
fix/: autofix.py  battery.py  debloat.py  engine.py  rollback.py  settings.py
report/: html.py  terminal.py
